%%{init: {
  "theme": "base",
  "themeVariables": {
    "fontFamily": "Inter, ui-sans-serif, system-ui",
    "fontSize": "16px",
    "primaryColor": "#111827",
    "primaryTextColor": "#F9FAFB",
    "primaryBorderColor": "#4B5563",
    "lineColor": "#94A3B8",
    "secondaryColor": "#1E293B",
    "tertiaryColor": "#0F172A",
    "background": "#0B0F19",
    "mainBkg": "#111827",
    "nodeBorder": "#64748B",
    "clusterBkg": "#0F172A",
    "clusterBorder": "#334155",
    "titleColor": "#F8FAFC",
    "edgeLabelBackground": "#0B0F19"
  }
}}%%
stateDiagram-v2
  [*] --> awaiting_claim: create intent
  awaiting_claim --> awaiting_payment: TG claim
  awaiting_payment --> paid: Stars OK
  paid --> running: generate
  running --> delivered: video ready
  paid --> failed: generate reject
  running --> failed: job fail
  failed --> refunded: Stars refund
  awaiting_claim --> expired: TTL
  awaiting_payment --> expired: TTL
  delivered --> [*]
  refunded --> [*]
  expired --> [*]
